--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,33 +13,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/text_view1" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/frame"/>
+            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/frame"/>
     <TextView
             android:text="@string/textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/text_view2" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/text_view1"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/navigation"/>
     <FrameLayout
-            android:layout_width="368dp"
-            android:layout_height="439dp"
-            android:id="@+id/frame" app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/frame"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/navigation">
+            app:layout_constraintBottom_toTopOf="@+id/navigation"
+    >
 
     </FrameLayout>
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
             android:background="?android:attr/windowBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/navigation">
+            app:menu="@menu/navigation" app:layout_constraintHorizontal_bias="0.0"
+    >
     </android.support.design.widget.BottomNavigationView>
 
 </android.support.constraint.ConstraintLayout>
