--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,9 +5,10 @@
         android:layout_height="match_parent">
 
     <ListView
-            android:layout_width="368dp"
-            android:layout_height="495dp"
+            android:layout_width="wrap_content"
+            android:layout_height="500dp"
             android:id="@+id/listview" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+    />
 </android.support.constraint.ConstraintLayout>
